[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Le36 <48809753+Le36@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
jsonpickle = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
